CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(OpenCV_STATIC OFF)
FIND_PACKAGE(OpenCV REQUIRED)

PROJECT(ShapeRetrieval)

SET(EIGEN3_INCLUDE_DIR "/usr/include/eigen3")

INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS} ${EIGEN3_INCLUDE_DIR})
ADD_EXECUTABLE(shape_retrieval shape_retrieval.cpp)
TARGET_LINK_LIBRARIES(shape_retrieval ${OpenCV_LIBS})
